assets/explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
  annotations:
  labels:
  namespace: default
spec:
  template:
    metadata:
      namespace: default
    spec:
      containers:
        - imagePullPolicy: Always
          name: explorer
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
          _init: false
          __active: true
          image: jchancehud/unirep-explorer:latest
          ports:
            - name: 8000tcp
              expose: true
              protocol: TCP
              containerPort: 8000
              _serviceType: ClusterIP
              _ipam: dhcp
      restartPolicy: Always
      volumes:
  replicas: 1
